--- a/src/my-app.html
+++ b/src/my-app.html
@@ -599,7 +599,8 @@
             </paper-tabs>
 
             <div id="bottomNavTitle" class="bottom-nav-title">
-              <img src="/images/mosaic-logo-white.png" />
+              <iron-icon icon="custom:logo"></iron-icon>
+              <p>Mosaic Care</p>
             </div>
             <paper-progress bottom-item class="mainProgress" indeterminate></paper-progress>
           </app-toolbar>
