--- a/src/icons/custom-icons.html
+++ b/src/icons/custom-icons.html
@@ -12,6 +12,39 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../../bower_components/iron-iconset-svg/iron-iconset-svg.html" />
 
 <iron-iconset-svg name="custom" size="24">
+  <svg id="logo">
+  <g>
+  	<polygon fill="#FFFFFF" points="23.359,0.991 23.359,0.991 18.289,5.406 18.284,5.41 17.653,6.696 14.834,0.945 14.8,0.981
+  		9.759,5.37 9.723,5.401 9.063,6.748 6.236,0.981 1.159,5.401 1.159,22.869 1.167,22.862 6.236,18.45 6.236,18.459 6.897,17.106
+  		9.723,22.867 9.723,22.866 9.723,22.869 14.798,18.451 14.799,18.449 14.8,18.448 15.484,17.05 18.289,22.869 23.364,18.45
+  		23.364,18.442 23.364,0.981 	"/>
+  	<polygon fill="#63348E" points="1.159,5.401 1.159,22.869 1.167,22.862 5.443,14.138 	"/>
+  	<polygon fill="#82C341" points="11.205,8.318 9.723,11.34 9.723,22.866 14.031,14.082 	"/>
+  	<polygon fill="#00B4B2" points="14.8,12.515 17.653,6.696 14.834,0.945 14.8,0.981 	"/>
+  	<polygon fill="#63B6D0" points="15.484,17.05 18.289,22.869 18.289,11.332 	"/>
+  	<polygon fill="#005B8E" points="23.359,0.991 18.289,11.332 18.289,22.869 18.289,22.869 23.364,18.45 23.364,18.442 23.364,0.981
+  			"/>
+  	<polygon fill="#E3A6CA" points="9.723,5.401 9.759,5.37 9.759,5.37 9.723,5.401 9.063,6.748 9.723,8.096 	"/>
+  	<polygon fill="#F283A6" points="6.236,18.45 6.236,18.459 6.897,17.106 6.236,15.754 	"/>
+  	<polygon fill="#B5E3F4" points="18.289,5.406 18.284,5.41 17.653,6.696 18.289,7.991 	"/>
+  	<polygon fill="#B5E3F4" points="14.8,18.448 15.484,17.05 14.8,15.651 	"/>
+  	<polygon fill="#4AB764" points="14.031,14.082 9.723,22.866 9.723,22.869 14.798,18.451 14.799,18.449 14.8,18.448 14.8,15.651
+  		"/>
+  	<polygon fill="#82C341" points="14.8,15.651 14.8,12.515 14.031,14.082 	"/>
+  	<polygon fill="#389F57" points="11.205,8.318 14.031,14.082 14.8,12.515 14.8,0.981 	"/>
+  	<polygon fill="#008DCD" points="18.289,5.406 18.289,7.991 18.289,11.332 19.106,9.661 23.359,0.991 	"/>
+  	<polygon fill="#82C341" points="14.8,0.981 9.759,5.37 11.205,8.318 	"/>
+  	<polygon fill="#DCD82D" points="9.759,5.37 9.723,5.401 9.723,11.34 11.205,8.318 	"/>
+  	<polygon fill="#F288A2" points="9.723,8.096 9.063,6.748 6.236,12.52 6.236,15.754 6.897,17.106 9.723,11.34 	"/>
+  	<polygon fill="#F283A6" points="6.236,15.754 6.236,12.52 5.443,14.138 	"/>
+  	<polygon fill="#DA5E95" points="6.236,15.754 5.443,14.138 1.167,22.862 6.236,18.45 	"/>
+  	<polygon fill="#943F93" points="6.236,12.52 6.236,0.981 1.159,5.401 5.443,14.138 	"/>
+  	<polygon fill="#E185B2" points="9.723,11.34 6.897,17.106 9.723,22.867 9.723,22.866 	"/>
+  	<polygon fill="#EF5674" points="9.063,6.748 6.236,0.981 6.236,12.52 	"/>
+  	<polygon fill="#7DCFE1" points="18.289,7.991 17.653,6.696 14.8,12.515 14.8,15.651 15.484,17.05 18.289,11.332 	"/>
+  </g>
+  </svg>
+
   <svg id="su-drawer" data-name="su drawer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 36">
     <defs>
       <style>.cls-1{fill:none;}.cls-2{fill:#cecece;}</style>
