initial load bug fix regarding settingsDB, style changes from big boss

--- a/src/behaviors/page-change-middleware.html
+++ b/src/behaviors/page-change-middleware.html
@@ -217,7 +217,7 @@
         };
         this.enablePageLoading();
         this.setRightMenuSelect();
-        //this.toggleLoadingDisplay(this.page);
+        this.toggleLoadingDisplay(this.page);
         this.lazyLoadPage(this.page);
         //this.resizeElements();
       },
