--- a/src/styles/common-styles.html
+++ b/src/styles/common-styles.html
@@ -330,8 +330,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       .green-tabs {
         margin-left: 20px;
         margin-right: 20px;
-        --paper-tabs:{
-          font-size:var(--report-tabs-font-size);
+        --paper-tabs: {
+          font-size: 15px;
+          font-weight: 600;
+          text-transform: uppercase;
+          overflow: hidden;
+          height: 48px;
         };
         --paper-tabs-selection-bar-color:#009688;
         --paper-tabs-container:{
