--- a/src/styles/app-shell-styles.html
+++ b/src/styles/app-shell-styles.html
@@ -551,8 +551,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       z-index: 3;
     }
 
-    app-toolbar {
-      height: 48px;
+    app-toolbar > paper-tabs{
+      height: 64px;
     }
 
     paper-tabs {
